adicionando os jogos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,11 @@
   "window.zoomLevel": 1,
   "cSpell.words": [
     "Bandeira",
+    "quarta",
+    "quinta",
+    "rica",
     "segunda",
+    "sexta",
     "terça"
   ]
 }
