--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,12 +35,38 @@
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "window.zoomLevel": 1,
   "cSpell.words": [
+    "acessá",
+    "através",
     "Bandeira",
+    "calendario",
+    "Calendário",
+    "conta",
+    "Copa",
+    "desenvolvido",
+    "DESSE",
+    "ensino",
+    "está",
+    "Evento",
+    "exclusivo",
+    "gratuito",
+    "jogos",
+    "Licença",
+    "mostra",
+    "necessário",
+    "pela",
+    "pode",
+    "Projeto",
+    "promovido",
     "quarta",
     "quinta",
     "rica",
+    "Rocketseat",
+    "seguintes",
     "segunda",
     "sexta",
-    "terça"
+    "tecnologias",
+    "terça",
+    "visualizar",
+    "Você"
   ]
 }
